text align fix

--- a/ABCTOYS_HOME.css
+++ b/ABCTOYS_HOME.css
@@ -1,3 +1,21 @@
+#HeaderBox {
+	float:left;
+	width:493px;
+	margin:0 20px;
+	height: 170px;
+}
+
+#h2 {
+	text-align right;
+}
+
+#buttonBox {
+	float:left;
+	width: 190px;
+	height: 50px;
+	margin: 0 50px auto;
+}
+
 .box{
 	float:left;
 	width:233px;
